--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,13 @@ ul{
 }
 .box-shadow-full{
     background-color: white;
-    padding: 4rem 0;
+    padding: 4rem ;
     margin-bottom: 3rem;
     z-index: 2;
     position: relative;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
-@media screen and (min-width: 768px){
+@media screen and (max-width: 768px){
     .box-shadow-full{
         padding: 3rem;
     }  
